add visualization for drive_42 sequence

--- a/index.html
+++ b/index.html
@@ -165,12 +165,30 @@
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+        Visualization of TraffiX V2X Cooperative Dataset (drive_07) in roadside and onboard sensors.
       </h2>
     </div>
   </div>
 </section>
 <!-- End teaser video -->
+
+<!-- Teaser video-->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <video poster="" id="tree" autoplay controls muted loop height="100%">
+        <!-- Your video here -->
+        <source src="static/videos/drive_42_labels_visualization_small.mp4"
+                type="video/mp4">
+      </video>
+      <h2 class="subtitle has-text-centered">
+        Visualization of TraffiX V2X Cooperative Dataset (drive_42) in roadside and onboard sensors.
+      </h2>
+    </div>
+  </div>
+</section>
+<!-- End teaser video -->
+
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
