--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>ProAnno</span>
+                    <span>3D labeling tool</span>
                     </a>
                   </span>
 
@@ -158,7 +158,7 @@
 <section class="hero is-small">
     <div class="hero-body">
         <div class="container">
-<!--            <h2 class="title is-3">Dataset Visualization</h2>-->
+            <!--            <h2 class="title is-3">Dataset Visualization</h2>-->
             <div id="results-carousel" class="carousel results-carousel">
                 <div class="item item-video5">
                     <video poster="" id="video5" autoplay controls muted loop height="100%">
@@ -221,8 +221,35 @@
 </section>
 <!-- End overview -->
 
-<!-- Sensor setup  -->
 <section class="section hero">
+    <div class="container is-max-desktop">
+        <div class="columns is-centered has-text-centered">
+            <div class="column is-four-fifths">
+                <h2 class="title is-3">Abstract</h2>
+                <div class="content has-text-justified">
+                    <p>
+                        Cooperative perception offers several benefits for enhancing the capabilities of autonomous
+                        vehicles and improving road safety. Using roadside sensors in addition to onboard sensors
+                        increases reliability and extends the sensor range. They offer a higher situational awareness
+                        for automated vehicles and prevent occlusions. We propose CoopDet3D, a cooperative multi-modal
+                        fusion model, and TraffiX, a V2X dataset, for the cooperative 3D object detection and tracking
+                        task. Our dataset contains 1,600 labeled point clouds and 4,000 labeled images from five
+                        roadside and four onboard sensors. It includes 50k 3D boxes with track IDs and precise GPS and
+                        IMU data. We labeled eight categories and covered occlusion scenarios with challenging driving
+                        maneuvers, like traffic violations, near-miss events, overtaking, and U-turns. Through multiple
+                        experiments, we show that our CoopDet3D camera-LiDAR fusion model achieves an increase of +14.36
+                        3D mAP compared to a vehicle camera-LiDAR fusion model. Finally, we make our model, dataset,
+                        labeling tool, and development kit publicly available to advance in connected and automated
+                        driving.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Sensor setup  -->
+<section class="section hero is-light">
     <div class="container is-max-desktop">
         <div class="columns">
             <div class="column is-four-fifths">
@@ -256,6 +283,7 @@
     <div class="container is-max-desktop">
         <div class="hero-body">
             <div class="item">
+                &nbsp;
                 <img src="static/images/infrastructure_sensors.jpg" alt="infrastructure_sensors"/>
                 <h2 class="subtitle has-text-centered">
                     Visualization of roadside sensors used to record the TraffiX V2X Cooperative Dataset from
@@ -267,113 +295,203 @@
 </section>
 
 
-<!-- Paper abstract -->
-<section class="section hero is-light">
-    <div class="container is-max-desktop">
-        <div class="columns is-centered has-text-centered">
-            <div class="column is-four-fifths">
-                <h2 class="title is-3">Abstract</h2>
-                <div class="content has-text-justified">
-                    <p>
-                        Cooperative perception offers several benefits for enhancing the capabilities of autonomous
-                        vehicles and improving road safety. Using roadside sensors in addition to onboard sensors
-                        increases reliability and extends the sensor range. They offer a higher situational awareness
-                        for automated vehicles and prevent occlusions. We propose CoopDet3D, a cooperative multi-modal
-                        fusion model, and TraffiX, a V2X dataset, for the cooperative 3D object detection and tracking
-                        task. Our dataset contains 1,600 labeled point clouds and 4,000 labeled images from five
-                        roadside and four onboard sensors. It includes 50k 3D boxes with track IDs and precise GPS and
-                        IMU data. We labeled eight categories and covered occlusion scenarios with challenging driving
-                        maneuvers, like traffic violations, near-miss events, overtaking, and U-turns. Through multiple
-                        experiments, we show that our CoopDet3D camera-LiDAR fusion model achieves an increase of +14.36
-                        3D mAP compared to a vehicle camera-LiDAR fusion model. Finally, we make our model, dataset,
-                        labeling tool, and development kit publicly available to advance in connected and automated
-                        driving.
-                    </p>
+<section class="hero is-small is-light">
+    <div class="hero-body">
+        <div class="container">
+            <h2 class="title is-3">Dataset Labeling</h2>
+            <video poster="" autoplay controls muted loop height="100%">
+                <source src="static/videos/timelapse_labeling_fast.mp4" type="video/mp4">
+            </video>
+        </div>
+    </div>
+</section>
+
+
+<section class="hero">
+    <div class="hero-body">
+        <div class="container is-max-desktop is-centered has-text-centered">
+            <h2 class="title">Dataset Statistics</h2>
+            <div id="results-carousel" class="carousel results-carousel">
+                <div class="item">
+                    <!-- Your image here -->
+                    <img src="static/images/bar_chart_class_occurrences_all_drives.jpg" alt="MY ALT TEXT"/>
+                    <h2 class="subtitle has-text-centered">
+                        Distribution of objects between day and night.
+                    </h2>
+                </div>
+                <div class="item">
+                    <!-- Your image here -->
+                    <img src="static/images/bar_chart_avg_num_points_per_class_all_drives.jpg" alt="MY ALT TEXT"/>
+                    <h2 class="subtitle has-text-centered">
+                        Average and maximum number of 3D points for each class.
+                    </h2>
+                </div>
+                <div class="item">
+                    <!-- Your image here -->
+                    <img src="static/images/bar_chart_avg_track_lengths_all_drives_log.jpg" alt="MY ALT TEXT"/>
+                    <h2 class="subtitle has-text-centered">
+                        Average and maximum track length for all classes.
+                    </h2>
+                </div>
+                <div class="item">
+                    <!-- Your image here -->
+                    <img src="static/images/histogram_avg_rotation.jpg" alt="MY ALT TEXT"/>
+                    <h2 class="subtitle has-text-centered">
+                        Visualization of rotations (yaw).
+                    </h2>
+                </div>
+                <div class="item">
+                    <!-- Your image here -->
+                    <img src="static/images/line_chart_avg_num_points_with_distance.jpg" alt="MY ALT TEXT"/>
+                    <h2 class="subtitle has-text-centered">
+                        3D points grouped by distance.
+                    </h2>
+                </div>
+                <div class="item">
+                    <!-- Your image here -->
+                    <img src="static/images/bev_plot_all_drives.jpg" alt="MY ALT TEXT"/>
+                    <h2 class="subtitle has-text-centered">
+                        BEV visualization of tracks.
+                    </h2>
+                </div>
+                <div class="item">
+                    <!-- Your image here -->
+                    <img src="static/images/histogram_num_objects_per_num_points.jpg" alt="MY ALT TEXT"/>
+                    <h2 class="subtitle has-text-centered">
+                        Histogram of 3D points.
+                    </h2>
+                </div>
+                <div class="item">
+                    <!-- Your image here -->
+                    <img src="static/images/histogram_objects_in_frame.jpg" alt="MY ALT TEXT"/>
+                    <h2 class="subtitle has-text-centered">
+                        Histogram of 3D box labels.
+                    </h2>
+                </div>
+                <div class="item">
+                    <!-- Your image here -->
+                    <img src="static/images/histogram_track_lengths.jpg" alt="MY ALT TEXT"/>
+                    <h2 class="subtitle has-text-centered">
+                        Histogram of track lengths.
+                    </h2>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!-- End paper abstract -->
 
-
-<!-- Image carousel -->
-<!--<section class="hero is-small">-->
-<!--  <div class="hero-body">-->
-<!--    <div class="container">-->
-<!--      <div id="results-carousel" class="carousel results-carousel">-->
-<!--       <div class="item">-->
-<!--        &lt;!&ndash; Your image here &ndash;&gt;-->
-<!--        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>-->
-<!--        <h2 class="subtitle has-text-centered">-->
-<!--          First image description.-->
-<!--        </h2>-->
-<!--      </div>-->
-<!--      <div class="item">-->
-<!--        &lt;!&ndash; Your image here &ndash;&gt;-->
-<!--        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>-->
-<!--        <h2 class="subtitle has-text-centered">-->
-<!--          Second image description.-->
-<!--        </h2>-->
-<!--      </div>-->
-<!--      <div class="item">-->
-<!--        &lt;!&ndash; Your image here &ndash;&gt;-->
-<!--        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>-->
-<!--        <h2 class="subtitle has-text-centered">-->
-<!--         Third image description.-->
-<!--       </h2>-->
-<!--     </div>-->
-<!--     <div class="item">-->
-<!--      &lt;!&ndash; Your image here &ndash;&gt;-->
-<!--      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>-->
-<!--      <h2 class="subtitle has-text-centered">-->
-<!--        Fourth image description.-->
-<!--      </h2>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</section>-->
-<!-- End image carousel -->
-
-
-<!-- Youtube video -->
-<!--<section class="hero is-small is-light">-->
-<!--  <div class="hero-body">-->
-<!--    <div class="container">-->
-<!--      &lt;!&ndash; Paper video. &ndash;&gt;-->
-<!--      <h2 class="title is-3">Video Presentation</h2>-->
-<!--      <div class="columns is-centered has-text-centered">-->
-<!--        <div class="column is-four-fifths">-->
-<!--          -->
-<!--          <div class="publication-video">-->
-<!--            &lt;!&ndash; Youtube embed code here &ndash;&gt;-->
-<!--            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</section>-->
-<!-- End youtube video -->
-
-
-
-<!-- Paper poster -->
-<!-- <section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title">Poster</h2>
-
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
-          </iframe>
-        
-      </div>
+<section class="hero">
+    <div class="hero">
+        <div class="container">
+            <h2 class="title is-3 has-text-centered">Benchmark</h2>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Config</th>
+                    <th></th>
+                    <th>BEV mAP</th>
+                    <th></th>
+                    <th>3D mAP</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>Domain</th>
+                    <th>Modality</th>
+                    <th>&nbsp;</th>
+                    <th>Easy</th>
+                    <th>Moderate</th>
+                    <th>Hard</th>
+                    <th>Average</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Vehicle</td>
+                    <td>Camera</td>
+                    <td>46.83</td>
+                    <td>31.47</td>
+                    <td>37.82</td>
+                    <td>30.77</td>
+                    <td>30.36</td>
+                </tr>
+                <tr>
+                    <td>Vehicle</td>
+                    <td>LiDAR</td>
+                    <td>85.33</td>
+                    <td>85.22</td>
+                    <td>76.86</td>
+                    <td>69.04</td>
+                    <td>80.11</td>
+                </tr>
+                <tr>
+                    <td>Vehicle</td>
+                    <td>Camera + LiDAR</td>
+                    <td>84.90</td>
+                    <td>77.60</td>
+                    <td>72.08</td>
+                    <td>73.12</td>
+                    <td>76.40</td>
+                </tr>
+                <tr>
+                    <td>Infrastructure</td>
+                    <td>Camera</td>
+                    <td>61.98</td>
+                    <td>31.19</td>
+                    <td>46.73</td>
+                    <td>40.42</td>
+                    <td>35.04</td>
+                </tr>
+                <tr>
+                    <td>Infrastructure</td>
+                    <td>LiDAR</td>
+                    <td>92.86</td>
+                    <td>86.17</td>
+                    <td>88.07</td>
+                    <td>75.73</td>
+                    <td>84.88</td>
+                </tr>
+                <tr>
+                    <td>Infrastructure</td>
+                    <td>Camera + LiDAR</td>
+                    <td>92.92</td>
+                    <td>87.99</td>
+                    <td><strong>89.09</strong></td>
+                    <td><strong>81.69</strong></td>
+                    <td><u>87.01</u></td>
+                </tr>
+                <tr>
+                    <td>Cooperative</td>
+                    <td>Camera</td>
+                    <td>68.94</td>
+                    <td>45.41</td>
+                    <td>42.76</td>
+                    <td>57.83</td>
+                    <td>45.74</td>
+                </tr>
+                <tr>
+                    <td>Cooperative</td>
+                    <td>LiDAR</td>
+                    <td><u>93.93</u></td>
+                    <td><u>92.63</u></td>
+                    <td>78.06</td>
+                    <td>73.95</td>
+                    <td>85.86</td>
+                </tr>
+                <tr>
+                    <td>Cooperative</td>
+                    <td>Camera + LiDAR</td>
+                    <td><strong>94.22</strong></td>
+                    <td><strong>93.42</strong></td>
+                    <td><u>88.17</u></td>
+                    <td><u>79.94</u></td>
+                    <td><strong>90.76</strong></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-  </section> -->
-<!--End paper poster -->
-
-
+</section>
 <!--BibTex citation -->
 <!-- <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
