--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
@@ -311,7 +311,7 @@
     <div class="hero-body">
         <div class="container is-max-desktop is-centered has-text-centered">
             <h2 class="title">Dataset Statistics</h2>
-            <div id="results-carousel" class="carousel results-carousel">
+            <div id="results-carousel2" class="carousel results-carousel">
                 <div class="item">
                     <!-- Your image here -->
                     <img src="static/images/bar_chart_class_occurrences_all_drives.jpg" alt="MY ALT TEXT"/>
@@ -502,19 +502,21 @@
 <!--End BibTex citation -->
 
 
-<!--  <footer class="footer">-->
-<!--  <div class="container">-->
-<!--    <div class="columns is-centered">-->
-<!--      <div class="column is-8">-->
-<!--        <div class="content">-->
-<!--          <p>-->
-<!--            Credits to <a href="https://github.com/eliahuhorwitz/Academic-project-page-template"> <strong>Academic Project Page</strong></a>.-->
-<!--          </p>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</footer>-->
+<footer class="footer">
+    <div class="container">
+        <div class="columns is-centered">
+            <div class="column is-8">
+                <div class="content has-text-centered">
+                    <p>
+                        The <strong>TraffiX</strong> Dataset is licensed under <a
+                            href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA
+                        4.0</a>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <!-- Statcounter tracking code -->
 
